@@ -1481,7 +1481,7 @@ RQuery::$defaultFilters['rule']['rule']['operators']['is.disabled'] = Array(
     },
     'arg' => false
 );
-RQuery::$defaultFilters['rule']['rule']['operators']['is.snatbidir'] = Array(
+RQuery::$defaultFilters['rule']['rule']['operators']['is.bidir.nat'] = Array(
     'Function' => function(RuleRQueryContext $context )
     {
         if( !$context->object->isNatRule() )
@@ -1491,26 +1491,26 @@ RQuery::$defaultFilters['rule']['rule']['operators']['is.snatbidir'] = Array(
     },
     'arg' => false
 );
-RQuery::$defaultFilters['rule']['rule']['operators']['is.snat'] = Array(
+RQuery::$defaultFilters['rule']['rule']['operators']['has.source.nat'] = Array(
     'Function' => function(RuleRQueryContext $context )
     {
         if( !$context->object->isNatRule() )
             return false;
 
-        if( $context->object->natType() != 'none' )
+        if( $context->object->sourceNatTypeIs_None() )
             return true;
 
         return false;
     },
     'arg' => false
 );
-RQuery::$defaultFilters['rule']['rule']['operators']['is.dnat'] = Array(
+RQuery::$defaultFilters['rule']['rule']['operators']['has.destination.nat'] = Array(
     'Function' => function(RuleRQueryContext $context )
     {
         if( !$context->object->isNatRule() )
             return false;
 
-        if( $context->object->natType() != 'none' )
+        if( $context->object->destinationNatIsEnabled() )
             return false;
 
         return true;
@@ -1590,7 +1590,6 @@ RQuery::$defaultFilters['rule']['rule']['operators']['is.unused.fast'] = Array(
     'Function' => function(RuleRQueryContext $context )
     {
         $object = $context->object;
-        $value = $context->value;
 
         if( !$object->isSecurityRule() )
             derr("unsupported filter : this is not a security rule.".$object->toString());
@@ -1679,9 +1678,8 @@ RQuery::$defaultFilters['rule']['rule']['operators']['is.unused.fast'] = Array(
 
 
 RQuery::$defaultFilters['rule']['name']['operators']['eq'] = Array(
-    'eval' => function($object, &$nestedQueries, $value)
-    {   /** @var Rule|SecurityRule|NatRule|DecryptionRule|AppOverrideRule|CaptivePortalRule|PbfRule|QoSRule|DoSRule $object */
-        return $object->name() == $value;
+    'Function' => function(RuleRQueryContext $context )
+    {   return $context->object->name() == $context->value;
     },
     'arg' => true
 );
@@ -1812,7 +1810,7 @@ RQuery::$defaultFilters['rule']['target']['operators']['has'] = Array(
     'Function' => function(RuleRQueryContext $context )
     {
         $vsys = null;
-        $serial = '';
+
         $ex = explode('/', $context->value);
 
         if( count($ex) > 2 )
